[gd_scene load_steps=28 format=2]

[ext_resource path="res://common/settings.gd" type="Script" id=1]
[ext_resource path="res://common/managers/ink_manager.gd" type="Script" id=2]
[ext_resource path="res://common/ink/game.ink" type="Resource" id=3]
[ext_resource path="res://addons/paulloz.ink/InkPlayer.cs" type="Script" id=4]
[ext_resource path="res://common/debug/debug_event_listener.gd" type="Script" id=5]
[ext_resource path="res://interface/about_menu/about_menu.tscn" type="PackedScene" id=6]
[ext_resource path="res://interface/layers/menu_layer.gd" type="Script" id=7]
[ext_resource path="res://interface/layers/transition_layer.gd" type="Script" id=8]
[ext_resource path="res://interface/layers/hud_layer.gd" type="Script" id=9]
[ext_resource path="res://interface/layers/world_layer.gd" type="Script" id=10]
[ext_resource path="res://interface/layers/confirmation_box_layer.gd" type="Script" id=11]
[ext_resource path="res://common/managers/state_manager.gd" type="Script" id=12]
[ext_resource path="res://interface/main_menu/main_menu.tscn" type="PackedScene" id=13]
[ext_resource path="res://common/managers/level_manager.gd" type="Script" id=14]
[ext_resource path="res://assets/sprites/nav_target.png" type="Texture" id=15]
[ext_resource path="res://interface/tooltip/tooltip_container.gd" type="Script" id=16]
[ext_resource path="res://assets/sprites/fibrin_potion.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/activation_potion.png" type="Texture" id=19]
[ext_resource path="res://interface/more_info_panel/more_info_panel.tscn" type="PackedScene" id=20]
[ext_resource path="res://interface/game_background_header.tscn" type="PackedScene" id=21]
[ext_resource path="res://interface/game_background.tscn" type="PackedScene" id=22]
[ext_resource path="res://interface/more_info_panel/more_info_container.gd" type="Script" id=23]
[ext_resource path="res://assets/sprites/factor_potion.png" type="Texture" id=24]
[ext_resource path="res://interface/powerups/powerup_button.tscn" type="PackedScene" id=25]
[ext_resource path="res://assets/audio/harp.ogg" type="AudioStream" id=26]
[ext_resource path="res://interface/connection_line.gd" type="Script" id=27]
[ext_resource path="res://assets/fonts/header.tres" type="DynamicFont" id=28]

[node name="MainScene" type="Node2D"]

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 26 )
autoplay = true

[node name="Settings" type="Node2D" parent="."]
script = ExtResource( 1 )
passive_movement_speed = 2.0
show_navmap = true
fade_to_game_time = 0.5
level_directory = "res://levels/scenes"
new_game_level = "res://levels/scenes/new_game_level.tscn"

[node name="Debug" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Managers" type="Node2D" parent="."]

[node name="InkManager" type="Node2D" parent="Managers"]
script = ExtResource( 2 )

[node name="InkPlayer" type="Node" parent="Managers/InkManager"]
unique_name_in_owner = true
script = ExtResource( 4 )
autoLoadStory = true
story = ExtResource( 3 )

[node name="StateManager" type="Node2D" parent="Managers"]
script = ExtResource( 12 )

[node name="LevelManager" type="Node2D" parent="Managers"]
script = ExtResource( 14 )

[node name="WorldLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
script = ExtResource( 10 )

[node name="World" type="Control" parent="WorldLayer"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NavTarget" type="Sprite" parent="WorldLayer"]
unique_name_in_owner = true
visible = false
texture = ExtResource( 15 )

[node name="NavLine" type="Line2D" parent="WorldLayer"]
unique_name_in_owner = true
visible = false
width = 4.0
default_color = Color( 0.956863, 0.752941, 0.368627, 1 )
joint_mode = 1

[node name="ConnectionLine" type="Line2D" parent="WorldLayer"]
visible = false
width = 4.0
default_color = Color( 1, 0.905882, 0.839216, 1 )
script = ExtResource( 27 )

[node name="HUDLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
script = ExtResource( 9 )

[node name="MenuButton" type="Button" parent="HUDLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -39.0
margin_bottom = 26.0
size_flags_vertical = 0
text = "Menu"

[node name="ScoreContainer" type="HBoxContainer" parent="HUDLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -221.0
margin_top = -40.0
mouse_filter = 2
custom_constants/separation = 12

[node name="HBoxContainer" type="VBoxContainer" parent="HUDLayer/ScoreContainer"]
margin_right = 94.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/separation = 0

[node name="Label" type="Label" parent="HUDLayer/ScoreContainer/HBoxContainer"]
margin_right = 94.0
margin_bottom = 13.0
text = "Connections Made:"

[node name="TotalConnectionsLabel" type="Label" parent="HUDLayer/ScoreContainer/HBoxContainer"]
unique_name_in_owner = true
margin_top = 13.0
margin_right = 94.0
margin_bottom = 40.0
theme_type_variation = "menuheader"
custom_colors/font_color = Color( 0.745098, 0.14902, 0.2, 1 )
custom_colors/font_outline_modulate = Color( 0.219608, 0.0862745, 0.192157, 1 )
custom_colors/font_color_shadow = Color( 0.219608, 0.0862745, 0.192157, 1 )
custom_fonts/font = ExtResource( 28 )
text = "150"
align = 1

[node name="HBoxContainer2" type="VBoxContainer" parent="HUDLayer/ScoreContainer"]
margin_left = 106.0
margin_right = 221.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/separation = 0

[node name="Label2" type="Label" parent="HUDLayer/ScoreContainer/HBoxContainer2"]
margin_right = 115.0
margin_bottom = 13.0
text = "Connections Upgraded:"

[node name="ConnectionsUpgradedLabel" type="Label" parent="HUDLayer/ScoreContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_top = 13.0
margin_right = 115.0
margin_bottom = 40.0
theme_type_variation = "menuheader"
custom_colors/font_color = Color( 0.745098, 0.14902, 0.2, 1 )
custom_colors/font_outline_modulate = Color( 0.219608, 0.0862745, 0.192157, 1 )
custom_colors/font_color_shadow = Color( 0.219608, 0.0862745, 0.192157, 1 )
custom_fonts/font = ExtResource( 28 )
text = "150"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="PlateletCommander" parent="HUDLayer" instance=ExtResource( 21 )]

[node name="InventoryContainer" type="MarginContainer" parent="HUDLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -70.0
margin_right = 156.0
custom_constants/margin_bottom = 12

[node name="PanelContainer" type="PanelContainer" parent="HUDLayer/InventoryContainer"]
margin_right = 156.0
margin_bottom = 58.0
rect_min_size = Vector2( 64, 32 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="HUDLayer/InventoryContainer/PanelContainer"]
margin_left = 6.0
margin_top = 6.0
margin_right = 149.0
margin_bottom = 51.0

[node name="HBoxContainer" type="HBoxContainer" parent="HUDLayer/InventoryContainer/PanelContainer/MarginContainer"]
margin_right = 143.0
margin_bottom = 45.0
size_flags_horizontal = 3

[node name="ActivateButton" parent="HUDLayer/InventoryContainer/PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource( 25 )]
powerup_texture = ExtResource( 19 )
ink_path = "activation_potion"

[node name="FibrinButton" parent="HUDLayer/InventoryContainer/PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource( 25 )]
margin_left = 49.0
margin_right = 94.0
powerup_id = 1
powerup_texture = ExtResource( 17 )
ink_path = "fibrin_potion"

[node name="XLinkButton" parent="HUDLayer/InventoryContainer/PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource( 25 )]
margin_left = 98.0
margin_right = 143.0
powerup_id = 2
powerup_texture = ExtResource( 24 )
ink_path = "xlink_potion"

[node name="MoreInfoContainer" type="Control" parent="HUDLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 23 )

[node name="MoreInfoPanel" parent="HUDLayer/MoreInfoContainer" instance=ExtResource( 20 )]
visible = false

[node name="TooltipContainer" type="Control" parent="HUDLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 16 )

[node name="MenuLayer" type="CanvasLayer" parent="."]
pause_mode = 2
unique_name_in_owner = true
script = ExtResource( 7 )

[node name="GameBackground" parent="MenuLayer" instance=ExtResource( 22 )]

[node name="MainMenu" parent="MenuLayer" instance=ExtResource( 13 )]
unique_name_in_owner = true

[node name="AboutLayer" type="CanvasLayer" parent="."]
pause_mode = 2
unique_name_in_owner = true
visible = false

[node name="GameBackground" parent="AboutLayer" instance=ExtResource( 22 )]

[node name="AboutMenu" parent="AboutLayer" instance=ExtResource( 6 )]

[node name="ConfirmationBoxLayer" type="CanvasLayer" parent="."]
pause_mode = 2
unique_name_in_owner = true
visible = false
script = ExtResource( 11 )

[node name="ConfirmationBoxContainer" type="CenterContainer" parent="ConfirmationBoxLayer"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TransitionLayer" type="CanvasLayer" parent="."]
pause_mode = 2
visible = false
script = ExtResource( 8 )

[node name="BlackRect" type="ColorRect" parent="TransitionLayer"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.219608, 0.0862745, 0.192157, 1 )

[connection signal="pressed" from="HUDLayer/MenuButton" to="HUDLayer" method="_on_MenuButton_pressed"]
